Refactor imports and clean up unused statements across commands and queries